--- a/styles.css
+++ b/styles.css
@@ -71,12 +71,12 @@ figure {
 	clear: none;
 	/* clear: both */;
 	}
-main, aside {
+main, .formcontactsection {
 	margin: 0 auto;
 	width:90%;
 	display: block;
 }
-main h3, aside h3 {
+main h3, .formcontactsection h3 {
 	text-align: center;
 }
 article {
@@ -212,9 +212,9 @@ textarea {
 .menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:100%; background:#f1f1f1;  position:absolute; text-align:center; font-size:12px;}
 .menu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
 .menu li {display: block;   padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;}
-.menu li:hover{display: block;    background:#ffffff; padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;}
+.menu li:hover{display: block;    background:#6766b3; padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;}
 .menu ul li a { text-decoration:none;  margin: 0px; color:#666;}
-.menu ul li a:hover {  color: #666; text-decoration:none;}
+.menu ul li a:hover {  color: #c0bfff; text-decoration:none;}
 .menu a{text-decoration:none; color:#666;}
 .menu a:hover{text-decoration:none; color:#666;}
 
@@ -254,7 +254,7 @@ textarea {
 		main {
 			margin:20px auto 0 auto;
 			}
-		aside {
+		.formcontactsection {
 			background-color: #334057;
 			width: 84%;
 			padding: 2%;
@@ -330,7 +330,7 @@ textarea {
 	  }
 	}
 
-	aside {
+	.formcontactsection {
 		width: 30%;
 		height: 30%;
 		}
